# nd-ytdl-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  download.rs  filters.rs  lastfm.rs  lib.rs  main.rs  metadata.rs  playlist.rs  proxy.rs  search.rs  title.rs  utils.rs  youtube.rs
