[package]
name = "nd-ytdl-proxy"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "nd-ytdl-proxy"
path = "src/main.rs"

[[bin]]
name = "assign-album"
path = "src/bin/assign_album.rs"
[[bin]]
name = "inspect-song"
path = "src/bin/inspect_song.rs"
[[bin]]
name = "repair-metadata"
path = "src/bin/repair_metadata.rs"
[[bin]]
name = "import-csv-playlist"
path = "src/bin/import_csv_playlist.rs"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
anyhow = "1.0.102"
csv = "1.4.0"
awc = "3.8.2"
deunicode = "1.6.2"
futures-util = "0.3.32"
lofty = "0.24.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
scraper = "0.26.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.52.0", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"